--- a/Astra.Core/Astra.Core.vcxproj
+++ b/Astra.Core/Astra.Core.vcxproj
@@ -183,6 +183,8 @@
     <ClCompile Include="src\graphics\fonts\GuiText.cpp" />
     <ClCompile Include="src\graphics\fonts\MetaFile.cpp" />
     <ClCompile Include="src\graphics\fonts\TextMesh.cpp" />
+    <ClCompile Include="src\graphics\gizmos\Gizmo.cpp" />
+    <ClCompile Include="src\graphics\gizmos\GizmoController.cpp" />
     <ClCompile Include="src\graphics\loaders\Loader.cpp" />
     <ClCompile Include="src\graphics\loaders\ObjLoader.cpp" />
     <ClCompile Include="src\graphics\materials\ImageMaterial.cpp" />
@@ -196,6 +198,7 @@
     <ClCompile Include="src\graphics\particles\ParticleSystem.cpp" />
     <ClCompile Include="src\graphics\renderers\Entity3dRenderer.cpp" />
     <ClCompile Include="src\graphics\renderers\FontRenderer.cpp" />
+    <ClCompile Include="src\graphics\renderers\GizmoRenderer.cpp" />
     <ClCompile Include="src\graphics\renderers\GuiRenderer.cpp" />
     <ClCompile Include="src\graphics\renderers\NormalEntity3dRenderer.cpp" />
     <ClCompile Include="src\graphics\renderers\ParticleRenderer.cpp" />
@@ -236,6 +239,8 @@
     <ClInclude Include="src\graphics\fonts\MetaFile.h" />
     <ClInclude Include="src\graphics\fonts\TextMesh.h" />
     <ClInclude Include="src\graphics\fonts\Word.h" />
+    <ClInclude Include="src\graphics\gizmos\Gizmo.h" />
+    <ClInclude Include="src\graphics\gizmos\GizmoController.h" />
     <ClInclude Include="src\graphics\materials\ImageMaterial.h" />
     <ClInclude Include="src\graphics\materials\Materials.h" />
     <ClInclude Include="src\graphics\materials\ParticleMaterial.h" />
@@ -257,6 +262,7 @@
     <ClInclude Include="src\graphics\particles\ConeParticleSystem.h" />
     <ClInclude Include="src\graphics\renderers\Entity3dRenderer.h" />
     <ClInclude Include="src\graphics\renderers\FontRenderer.h" />
+    <ClInclude Include="src\graphics\renderers\GizmoRenderer.h" />
     <ClInclude Include="src\graphics\renderers\GuiRenderer.h" />
     <ClInclude Include="src\graphics\renderers\NormalEntity3dRenderer.h" />
     <ClInclude Include="src\graphics\renderers\ParticleRenderer.h" />
@@ -269,6 +275,7 @@
     <ClInclude Include="src\graphics\scenes\Scene.h" />
     <ClInclude Include="src\graphics\shaders\EntityShader.h" />
     <ClInclude Include="src\graphics\shaders\FontShader.h" />
+    <ClInclude Include="src\graphics\shaders\GizmoShader.h" />
     <ClInclude Include="src\graphics\shaders\GuiShader.h" />
     <ClInclude Include="src\graphics\shaders\NormalEntityShader.h" />
     <ClInclude Include="src\graphics\shaders\ParticleShader.h" />
@@ -298,6 +305,7 @@
   <ItemGroup>
     <None Include="src\resources\shaders\Entity.shader" />
     <None Include="src\resources\shaders\Font.shader" />
+    <None Include="src\resources\shaders\Gizmo.shader" />
     <None Include="src\resources\shaders\Gui.shader" />
     <None Include="src\resources\shaders\NormalEntity.shader" />
     <None Include="src\resources\shaders\Particle.shader" />
